--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  background-image: url('https://freerangestock.com/sample/140799/wood-background--dark-wooden-background.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100vh;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main{
+  padding-top:20vh;
+  width: 70%;
+  margin: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.main input{
+  padding: 15px;  
+  font-size: 2.2vw;
+  font-weight: bolder;
+  font-family: serif;
+  border-radius: 15px;
+  background-color: #8d000056;
+  color: #ffffff;
+  
+}
+.one{
+  padding: 15px;
+  font-size: 2vw;
+  font-weight: bolder;
+  font-family: serif;
+  border-radius: 20px;
+  background-color: #8d000056;
+  color: #ffffff;
+  margin-left: 10px;
+}
+.main li{
+  padding: 5px;
+  font-size: 2vw;
+  font-weight: bolder;
+  font-family: serif;
+  border-radius: 20px;
+  color: #ffffff;
+}
+.two{
+  padding: 5px;
+  font-size: 1.5vw;
+  font-weight: bolder;
+  font-family: serif;
+  border-radius: 10px;
+  background-color: #8d000056;
+  color: #ffffff;
+  margin-left: 20px;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
